--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <title>Galaxia</title>
-    <link rel="stylesheet" href="./style.css">
+<head>
+<meta charset="UTF-8">
+<title>Galaxia</title>
+<link rel="stylesheet" href="style.css">
+</head>
 
-  </head>
-    
-  <body>
-  <body>
+<body>
 
+<!-- GALAXIA -->
+<div id="galaxy-container"></div>
+<div id="click-overlay"></div>
+
+<!-- CARTA -->
 <div id="letterScreen">
   <div class="letter">
     <h1>Para ti</h1>
@@ -55,15 +58,9 @@
   </div>
 </div>
 
-<!-- 🔥 CARGAR THREE.JS (VERSIÓN CORRECTA) -->
+<!-- THREE -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
-
-<!-- TU SCRIPT -->
 <script src="script.js"></script>
 
 </body>
-    <script  src="./script.js"></script>
-
-  </body>
-  
 </html>
